--- a/Danganronpa.theme.css
+++ b/Danganronpa.theme.css
@@ -1,6 +1,6 @@
-//META{"name":"Danganronpa_Theme","description":"It's a Killer Theme","author":"DevilsTheAvenged","version":"1"}*//{}
+//META{"name":"Danganronpa_Theme","description":"A theme dedicated to Danganronpa","author":"DevilsTheAvenged","version":"1"}*//{}
 .app {
-	background-image: url("https://wallpapertag.com/wallpaper/full/9/4/c/60943-danganronpa-wallpaper-1970x1400-desktop.jpg");
+	background-image: url("https://u.imageresize.org/51924e45-24ae-410a-9229-9080ce48b3ae.jpeg");
    background-size: cover !important;
 	background-position: center !important;
 }
@@ -1256,9 +1256,6 @@ a {
 .bda-slist .bda-header {
     border: none;
     color: white;
-}
-#app-mount > div.app-19_DXt.platform-osx > div > div.layers-3iHuyZ.flex-vertical.flex-spacer > div:nth-child(2) > div > div:nth-child(2) > div > div > div > div.content-column.default > div > div > div:nth-child(2) > div > div:nth-child(1) {
-    display: none; 
 }
 /* Discord Settings */
 /* User Popout Modal */
