--- a/Thunderstorm.theme.css
+++ b/Thunderstorm.theme.css
@@ -1,6 +1,6 @@
 //META{"name":"Thunderstorm_Theme","description":"Severe Weather is coming your way","author":"DevilsTheAvenged","version":"1"}*//{}
 .app {
-	background-image: url("http://getwallpapers.com/wallpaper/full/e/b/2/107105.jpg");
+	background-image: url("https://u.imageresize.org/2c66d9ce-510c-4b15-a159-ca1412c299be.jpeg");
    background-size: cover !important;
 	background-position: center !important;
 }
@@ -1094,9 +1094,6 @@ a {
 .theme-dark .ui-standard-sidebar-view .btn-close:hover,
 .avatar-uploader-inner {
     background-color: #272729;
-}
-#app-mount > div.app-19_DXt.platform-osx > div > div.layers-3iHuyZ.flex-vertical.flex-spacer > div:nth-child(2) > div > div:nth-child(2) > div > div > div > div.content-column.default > div > div > div:nth-child(2) > div > div:nth-child(1) {
-    display: none; 
 }
 .theme-dark .separator-gCa7yv,
 #bd-settings-sidebar .ui-tab-bar-separator {
