--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -96,7 +96,7 @@
 .chat .avatar-large {
 	opacity: 1;
 	transition: width .2s ease-in;
-	width: 4%;
+	width: 44px;
 	border-radius: 1px;
 	height: 83px;
 	background-size: cover;
@@ -105,7 +105,7 @@
 
 .chat .avatar-large:hover {
 	opacity: 1;
-	width: 9%;
+	width: 77px;
 }
 
 
@@ -275,7 +275,6 @@
 }
 
 .attachButton-1UjEWA {
-	background: black;
 	border-radius: 50px;
 }
 
