--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -407,7 +407,7 @@ form,
 	color: #fff;
 	border: 2px inset rgba(255, 255, 255, 0.8);
 }
-
+/*
 .message-group:not(.compact) .avatar-large[style*="235302947058089984"]~ .comment .message h2 span.username-wrapper::after,
 .members-1998pB .member .avatar-small[style="235302947058089984"]~ .member-inner .member-username .member-username-inner::after {
 	content: "Chocolate Lover";
@@ -426,7 +426,7 @@ form,
 	-webkit-flex-shrink: 0;
 	text-shadow: rgba(0, 0, 0, 0.6) 4px 2px 1px;
 }
-
+*/
 .theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
 	background: none;
 	border: none;
