--- a/Danganronpa.theme.css
+++ b/Danganronpa.theme.css
@@ -69,6 +69,7 @@
 .theme-dark .message-group:not(.has-divider) {
     border-bottom-color: transparent;
 }
+/*
 .message-group .avatar-large[style*="235302947058089984"] ~ .comment .message h2 span.username-wrapper::after {
     background-color: #5088A3 !important;
     padding: 0px 4px;
@@ -91,6 +92,7 @@
     font-size: small;
     text-shadow: 0 0 2px white;
 }
+*/
 .icon-1KK5se {
     fill: #5088A3;
     opacity: .7;
