--- a/NewJerseyDevils.theme.css
+++ b/NewJerseyDevils.theme.css
@@ -1800,7 +1800,7 @@ a, .theme-dark .primary-jw0I4K, .user-settings-connections .connection-header .c
 .marginLeft4-3VaXdt {
     color: white;
 }
-
+/*
 .message-group:not(.compact) .avatar-large[style*="235302947058089984"]~ .comment .message h2 span.username-wrapper::after {
 	content: "New Jersey Devils Fan" !important;
 	color: #fff !important;
@@ -1818,6 +1818,7 @@ a, .theme-dark .primary-jw0I4K, .user-settings-connections .connection-header .c
 	-webkit-flex-shrink: 0;
 	text-shadow: rgba(0, 0, 0, 0.6) 4px 2px 1px;
 }
+*/
 .channels-Ie2l6A {
     background-color: transparent;
 }
