--- a/OldHistory.theme.css
+++ b/OldHistory.theme.css
@@ -314,11 +314,13 @@ a {
     border: none;
 }
 .theme-dark .checked-3_4uQ9[style="background-color: rgb(114, 137, 218); border-color: rgb(114, 137, 218);"],
-.checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.checkbox .checkbox-inner input[type=checkbox]:checked+span,
+.theme-dark .checked-3_4uQ9 {
    background-color: rgba(0,0,0,0.4) !important;
 	 border: none;
 }
-.theme-dark .checked-3_4uQ9[style*="border-color: rgb(114, 137, 218);"] polyline[stroke] {
+.theme-dark .checked-3_4uQ9[style*="border-color: rgb(114, 137, 218);"] polyline[stroke],
+.theme-dark .checked-3_4uQ9[style*="border-color: rgb(79, 84, 92);"] polyline[stroke]{
     stroke: silver;
     stroke-width: 2;
 }
@@ -388,7 +390,9 @@ a {
    border: 2px ridge black;
 }
 .headerSpotify-zpWxgT,
-.topSectionSpotify-1lI0-P  {
+.topSectionSpotify-1lI0-P,
+.headerXbox-3G-4PF,
+.topSectionXbox-3fWLjS {
     background: rgba(67,160,71,.6);
 }
 .headerStreaming-2FjmGz,
@@ -579,20 +583,9 @@ a {
     background: #d1aa4c;
     color: black;
 }
-.private-channel-recipients-invite .footer button {
-    background-color: #d1aa4c !important;
-    color: black;
-}
-.private-channel-recipients-invite .footer button:hover {
-    background-color: #d1aa4c !important;
-    border: 1px solid white;
-}
-.theme-dark .private-channel-recipients-invite .friend {
-    background: black;
-    color: #fff;
-}
-.theme-dark .private-channel-recipients-invite .friend.selected, 
-.theme-dark .private-channel-recipients-invite .friend:hover {
+
+
+.theme-dark .friendSelected--wQP3f {
     background: #d1aa4c;
     color: black;
 }
@@ -609,26 +602,12 @@ a {
     background: black;
     box-shadow: none;
 }
-.theme-dark .themed-popout .header {
-   background-color: #d1aa4c;
-}
 .theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .message-group .actionButtons-1sUUug .jumpButton-3DTcS_,
 .theme-dark .search-results-wrap .action-buttons .jump-button {
     background-color: #d1aa4c !important;
     color: black;
 }
-.private-channel-recipients-invite .body .scroller::-webkit-scrollbar-thumb {
-   background-color: #d1aa4c !important;
-}
-.private-channel-recipients-invite .body .scroller::-webkit-scrollbar-track {
-    background-color: transparent !important;
-}
-.theme-dark .themed-popout,
-.theme-dark .themed-popout .footer {
-    background-color: black;
-    border: none;
-    box-shadow: none;
-}
+
 .theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .message-group:hover .actionButtons-1sUUug {
     box-shadow: none !important;
     background: none !important;
@@ -638,8 +617,8 @@ a {
     background-color: rgba(209, 170, 76,0.4) !important;
     border-color: transparent;
 }
-.theme-dark .themed-popout .header .subtitle, 
-.theme-dark .themed-popout .text {
+.theme-dark .subtitle-2iWJ5y
+{
     color: black;
 }
 .theme-dark .search-results-wrap .channel-separator .channel-name {
@@ -1373,4 +1352,52 @@ a {
 }
 .need-help-modal.deprecated .header input[type=text]:focus {
     border-bottom: 1px solid #d1aa4c;
+}
+.theme-dark .activityFeed-28jde9 {
+    background-color: rgba(0,0,0,0.3);
+}
+.arrow-1-DaGi,
+.theme-dark .discriminator-1Kma2g{
+    color: white;
+}
+.theme-dark .card-7JP0BX {
+    background-color: black;
+    color: white;
+}
+.theme-dark .header-1RC2Wb {
+    background-color: rgba(0, 0, 0,0.4) /* (Main Color, .4) */;
+}
+.theme-dark .header-1RC2Wb:hover {
+    background-color: rgba(0, 0, 0,.7) /* (Main Color, .7) */;
+}
+.headerButtonColor-G7_f-V,
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6{
+    background: black !important;
+    color: #fff;
+}
+.headerButtonColor-G7_f-V:hover {
+    box-shadow: 0 0 16px 4px white;
+}
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6:hover {
+    box-shadow: 0 0 16px 4px white;
+}
+.theme-dark .body-SKIE6r {
+    background-color: transparent;
+}
+.theme-dark .headerText-2niCs_ {
+    border-top-color: transparent;
+    color: white;
+}
+.theme-dark .player-1kJMbj {
+    border-bottom-color: transparent;
+}
+.theme-dark .sectionLine-JjseS9 {
+    background-color: transparent;
+}
+.scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-dark .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb {
+    background-color: rgba(0,0,0,0.6);
+    border-color: rgba(0, 0, 0, 0);
+}
+.scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
+    background-color: transparent;
 }
